@@ -39,3 +39,5 @@
 19-Mar-2024 - V0.43 Raise exception and return empty list if not all dataContainers are properly read from file in __mergeContainers()
 29-May-2024 - V0.44 Fix pylinting
  1-Jul-2024 - V0.45 Update CurrentHoldingsProvider to stop including DSN6 maps
+ 9-Sep-2024 - V0.46 Always defer to loading holdings data from remote (rather than storing it locally);
+                    Add validation coefficients to list of repository_content_types
